--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "child_process": "^1.0.2",
     "electron-updater": "^6.3.9",
     "styled-components": "^6.1.19",
+    "tree-kill": "^1.2.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
